# cutplanner

./: .gitignore  README.md  pyproject.toml
examples/: inventory.yaml
src/cutplanner/: bom.py  cli.py  inventory.py  models.py  openscad.py  packer.py  parser.py
src/cutplanner/server/: app.py
src/cutplanner/server/static/: index.html
src/cutplanner/server/static/css/: styles.css
src/cutplanner/server/static/js/: api-client.js  app.js  panel-state.js  sheet-renderer.js
