[project]
name = "cutplanner"
version = "0.1.0"
description = "Generate cutting layouts for sheet material from OpenSCAD designs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
]

[project.scripts]
cutplanner = "cutplanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cutplanner"]
